Tab Justified Setting for Overflow Issue #829

--- a/wp-content/themes/impruwclientparent/css/less/builder.less
+++ b/wp-content/themes/impruwclientparent/css/less/builder.less
@@ -1744,7 +1744,7 @@ a {
 				width: 220px;
 			}
 			.checkbox {
-				margin-top: 8px;
+				margin-top: 10px;
 				.icons {
 					line-height: 20px;
 					.first-icon, .second-icon {
